--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-eu sou linda
+<HTML> 
+    <HEAD> 
+         <TITLE> COELHOS FOFOS<TITLER> 
+<HEAD> 
+ <BOBY> COELHINHOS
+<IMG SRC= "COELHO.JPEG" ALT="FOFINHOS" WIDTH="600" HEIGHT="400">
+    </BOBY>
+    </HEAD>
